<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar or header with delete button -->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        android:orientation="horizontal"
        android:padding="10dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:id="@+id/renameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                app:tint="@color/iconTint" />

            <TextView
                android:id="@+id/fileRenameButonTextString"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rename file"
                android:textSize="10sp"
                android:textColor="#403F3F" />

        </LinearLayout>

        <TextView
            android:id="@+id/fileNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/file_name"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />


        <!-- Delete button aligned to the right -->
        <ImageView
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="Delete"
            android:src="@android:drawable/ic_menu_delete"
            app:tint="@color/iconTint" />
    </LinearLayout>


    <TextView
        android:id="@+id/fileEncodingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLayout"
        android:background="@color/headerBackground"
        android:includeFontPadding="false"
        android:paddingStart="10dp"
        android:text="@string/encoding_failed"
        android:textColor="@color/secondaryText"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/fileEncodingTextView"
        android:layout_above="@id/buttonLayout"
        android:background="@color/editorBackground"
        android:textColor="@color/primaryText"
        android:textColorHint="@color/secondaryText"
        android:gravity="top"
        android:padding="16dp"
        android:textSize="16sp"
        android:hint="@string/edit_hint"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        android:overScrollMode="always"
        android:nestedScrollingEnabled="true"
        android:animateLayoutChanges="false"
        android:inputType="textNoSuggestions"
        android:autoLink="none"
        android:linksClickable="false"/>


    <!-- Buttons at the bottom -->
    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/headerBackground"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:contentDescription="Save"
                android:src="@android:drawable/ic_menu_save"
                android:tint="@color/iconTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textSize="12sp"
                android:textColor="@color/secondaryText" />
        </LinearLayout>

        <!-- smaller divider -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/dividerColor" />

        <!-- UNDO -->
        <LinearLayout
            android:id="@+id/undoLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/undoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="Undo"
                android:src="@android:drawable/ic_menu_revert"
                android:tint="@color/iconTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/undo"
                android:textSize="12sp"
                android:textColor="@color/secondaryText" />
        </LinearLayout>

        <!-- REDO -->
        <LinearLayout
            android:id="@+id/redoLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true">

            <ImageButton
                android:id="@+id/redoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:focusable="false"
                android:contentDescription="Redo"
                android:src="@android:drawable/ic_menu_rotate"
                android:tint="@color/iconTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redo"
                android:textSize="12sp"
                android:textColor="@color/secondaryText" />
        </LinearLayout>

        <!-- smaller divider -->
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/dividerColor" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:contentDescription="Exit"
            android:text="@string/exit"
            android:textAlignment="center"
            android:textColor="@color/editExitButtonColuor"
            android:textSize="30sp"
            android:textStyle="bold"
            android:maxLines="1"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="30sp"
            android:autoSizeStepGranularity="1sp"/>
    </LinearLayout>
</RelativeLayout>